@@ -470,4 +470,7 @@ void *allocate_array_elem(void *array, size_t elem_size, int *nb_elems);
 
 double get_rotation(const int32_t *displaymatrix);
 
+/* read file contents into a string */
+char *file_read(const char *filename);
+
 #endif /* FFTOOLS_CMDUTILS_H */
